objects/ssot__ConvChannelEngagementSummary__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__AccountId__c</fullName>
        <label>Account Id</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ChannelEngagementId__c</fullName>
        <label>Channel Engagement Id</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ConfidentialityType__c</fullName>
        <label>Confidentiality Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Conv Channel Engmt Summary Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InteractionPurpose__c</fullName>
        <label>Interaction Purpose</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__MeetingNotesStatus__c</fullName>
        <label>Meeting Notes Status</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__MeetingNotes__c</fullName>
        <label>Meeting Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Title</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__NextSteps__c</fullName>
        <label>Next Steps</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PartnerAccountId__c</fullName>
        <label>Partner Account Id</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RelatedRecordId__c</fullName>
        <label>Related Record Id</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RelatedRecordObject__c</fullName>
        <label>Related Record Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Status__c</fullName>
        <label>Status</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1731039791089_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ConvChannelEngagementSummary_Related_rel</label>
        <referenceTo>ssot__BenefitAssignment__dlm</referenceTo>
        <relationshipLabel>ConvChannelEngagementSummary_Related_rel</relationshipLabel>
        <relationshipName>rel_1731039791089_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1731039795255_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ConvChannelEngagementSummary_Partner_rel</label>
        <referenceTo>ssot__Account__dlm</referenceTo>
        <relationshipLabel>ConvChannelEngagementSummary_Partner_rel</relationshipLabel>
        <relationshipName>rel_1731039795255_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1731039813656_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ConvChannelEngagementSummary_Related_rel</label>
        <referenceTo>ssot__BenefitAssignmentAdjustment__dlm</referenceTo>
        <relationshipLabel>ConvChannelEngagementSummary_Related_rel</relationshipLabel>
        <relationshipName>rel_1731039813656_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>